crates/stackable-versioned-macros/tests/default/changed.stderr
error: the previous field name must not start with the deprecation prefix
  --> tests/default/fail/changed.rs:11:52
   |
11 |             changed(since = "v1beta1", from_name = "deprecated_bar"),
   |                                                    ^^^^^^^^^^^^^^^^

error: the previous field name must not start with the deprecation prefix
  --> tests/default/fail/changed.rs:12:47
   |
12 |             changed(since = "v1", from_name = "deprecated_baz")
   |                                               ^^^^^^^^^^^^^^^^
